<resources>
    <string name="app_name">ac1300202</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_checkbox">Slideshow</string>

    <string name="home_second">Home Second</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="TextView1_Btn">Texto en Mensaje </string>
    <string name="Button1">Presione Boton </string>

    <string name="text"> 2. TextView </string>

    <string name="mensajeayuda"> 3. EditText </string>

    <string name="titulochequeos"> Listado de CheckBox </string>
    <string name="opcion1"> CheckBox 1 </string>
    <string name="opcion2"> CheckBox 2 </string>
    <string name="opcion3"> CheckBox 3 </string>
    <string name="text1"> 2 </string>
    <string name="text2"> 4 </string>
    <string name="text3"> 8 </string>

    <string name="RadioButton1">opc 1</string>
    <string name="RadioButton2">opc 2</string>
    <string name="RadioButton3">opc 3</string>
    <string name="mensaje_error_radiobutton">Ningun RadioButton
seleccionado</string>

    <string name="colors_prompt">Seleccione un Color</string>
    <string-array name="colors_array">
        <item>Blanco</item>
        <item>Negro</item>
        <item>Azul</item>
        <item>Rojo</item>
        <item>Verde</item>
        <item>Amarillo</item>
        <item>Gris</item>
        <item>Rosado</item>
    </string-array>

</resources>
